--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,9 +20,10 @@ body {
     top: 50%;
     left: 50%;
     background-color: #fff;
-    height: 550px;
+    height: 80%;
     min-width: 300px;
     border-radius: 25px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.507);
     transform: translate(-50%, -50%);
 }
 
@@ -31,6 +32,10 @@ body {
     width: 100%;
     height: 35%;
     border-radius: 25px 25px 0 0;
+}
+
+.login {
+    overflow-y: scroll;
 }
 
 .login h1 {
@@ -42,7 +47,7 @@ body {
     width: 90%;
     margin: 0 auto 15px;
     font-size: 1em;
-    line-height: 16px;
+    line-height: 20px;
 }
 
 form label {
@@ -54,6 +59,7 @@ form label {
     margin: 5px auto 0px;
     gap: 10px;
     border: 3px solid rgb(0, 30, 197);
+    border-right: 4px solid rgb(0, 30, 197);
     border-radius: 5px;
 }
 
