--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-    height: 100vh;
+    height: 100%;
 }
 
 body {
@@ -20,8 +20,10 @@ body {
     top: 50%;
     left: 50%;
     background-color: #fff;
-    height: 80%;
-    min-width: 300px;
+    height: 90%;
+    width: 80%;
+    min-width: 280px;
+    max-width: 600px;
     border-radius: 25px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.507);
     transform: translate(-50%, -50%);
@@ -35,7 +37,8 @@ body {
 }
 
 .login {
-    overflow-y: scroll;
+    overflow-y: auto;
+    height: 65%;
 }
 
 .login h1 {
@@ -50,16 +53,23 @@ body {
     line-height: 20px;
 }
 
+form {
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 form label {
     display: flex;
     align-items: center;
     background-color: rgb(0, 30, 197);
     width: 90%;
-    height: 40px;
-    margin: 5px auto 0px;
+    height: 20%;
+    margin: 10px auto 0px;
     gap: 10px;
-    border: 3px solid rgb(0, 30, 197);
-    border-right: 4px solid rgb(0, 30, 197);
+    border: 5px solid rgb(0, 30, 197);
+    border-right: 5px solid rgb(0, 30, 197);
     border-radius: 5px;
 }
 
@@ -73,7 +83,7 @@ form label i{
 form label input{
     width: 100%;
     height: 95%;
-    font-size: 1em;
+    font-size: 1.05em;
     padding: 5px;
     border-radius: 5px;
     border: none;
@@ -85,7 +95,8 @@ form input[type=submit] {
     color: white;
     font-size: 0.9em;
     width: 90%;
-    margin: 5px auto 0;
+    height: 20%;
+    margin: 10px auto 0;
     padding: 12px 0px;
     border-radius: 5px;
     border: none;
@@ -98,12 +109,14 @@ form input[type=submit]:hover {
 }
 
 form a {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: rgb(0, 110, 255);
     width: 90%;
-    margin: 5px auto;
+    height: 20%;
+    margin: 10px auto;
     padding: 10px 0;
-    text-align: center;;
     border: 1px solid rgb(0, 110, 255);
     text-decoration: none;
 
